--- a/src/app/components/raise-instance/raise-instance.component.html
+++ b/src/app/components/raise-instance/raise-instance.component.html
@@ -28,14 +28,11 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-            <!-- This is the tree node template for leaf nodes -->
-            <!-- There is inline padding applied to this node using styles.
-              This padding value depends on the mat-icon-button width. -->
-            <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+          <mat-tree [dataSource]="dataSourceNeeded" [treeControl]="treeControl" class="example-tree">
+
+          <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
               {{ node.name }}
             </mat-tree-node>
-            <!-- This is the tree node template for expandable nodes -->
             <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
               <div class="mat-tree-node">
                 <button [attr.aria-label]="'Toggle ' + node.name" mat-icon-button
@@ -46,8 +43,7 @@
                 </button>
                 {{ node.name }}
               </div>
-              <!-- There is inline padding applied to this div using styles.
-                  This padding value depends on the mat-icon-button width.  -->
+
               <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
                    role="group">
                 <ng-container matTreeNodeOutlet></ng-container>
@@ -71,14 +67,11 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-            <!-- This is the tree node template for leaf nodes -->
-            <!-- There is inline padding applied to this node using styles.
-              This padding value depends on the mat-icon-button width. -->
+          <mat-tree [dataSource]="dataSourceAchieved" [treeControl]="treeControl" class="example-tree">
+
             <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
               {{ node.name }}
             </mat-tree-node>
-            <!-- This is the tree node template for expandable nodes -->
             <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
               <div class="mat-tree-node">
                 <button [attr.aria-label]="'Toggle ' + node.name" mat-icon-button
@@ -89,15 +82,13 @@
                 </button>
                 {{ node.name }}
               </div>
-              <!-- There is inline padding applied to this div using styles.
-                  This padding value depends on the mat-icon-button width.  -->
+
               <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
                    role="group">
                 <ng-container matTreeNodeOutlet></ng-container>
               </div>
             </mat-nested-tree-node>
           </mat-tree>
-
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
