Fist steps with orcid

--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -93,6 +93,13 @@
                 <mat-checkbox formControlName="acceptedConditions">{{ t('iAcceptTermsConditions') }}.</mat-checkbox>
               </div>
             </div>
+            <div class="row">
+              <div class="col">
+                <button (click)="openOrcidModal()" mat-icon-button>
+                  <img alt="ORCID" src="assets/icons/orcid.png"/>
+                </button>
+              </div>
+            </div>
           </div>
 
         </mat-card-content>
