--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,12 +1,4 @@
-<div class="welcome-container">
-  <h1>Welcome to Raise a Dataset</h1>
-  <p>Join the community and start applying FAIR principles to your datasets</p>
-  <p>Our application is designed to help you:</p>
-  <ul>
-    <li>Apply FAIR principles to your datasets</li>
-    <li>Rescue abandoned datasets</li>
-    <li>Validate compliance with FAIR principles</li>
-  </ul>
-  <p>Join us now to start leveraging all the features we offer.</p>
-  <a class="register-link" href="/signup">Register here</a>
+<div>
+  <app-welcome-guest *ngIf="this.isGuest"></app-welcome-guest>
+  <app-welcome-user *ngIf="!this.isGuest"></app-welcome-user>
 </div>
